# azure-vm-count-prom-exporter

./: Dockerfile  README.md
src/: main.py  pyproject.toml  requirements.txt
